--- a/src/category.html
+++ b/src/category.html
@@ -314,7 +314,7 @@
 						<div class="category-products">
 							<div class="category-product">
 								<div class="category-product__img">
-									<img data-src="img/braun.png" data-title="title1" src="img/item.png" alt="item">
+									<img data-src="img/item.png" data-title="title1" src="img/item.png" alt="item">
 									<div class="category-product__img-scale">
 										<i class="icon icon-scale"></i>
 									</div>
