--- a/src/price.html
+++ b/src/price.html
@@ -37,12 +37,10 @@
 
 		<section class="we-do">
 			<div class="container">
-				<h2 class="we-do__title title title_bordered">Металлочерепица</h2>
-				<p>Металлочерепица является современным кровельным материалом, который сочетает в себе красивый внешний вид, относительную
-				простоту монтажа и небольшой общий вес получаемой конструкции. Крыша из металлочерепицы может иметь очень сложную форму благодаря большим возможностям, которые дает этот незаменимый при строительстве материал. В настоящий момент металлической кровлей обустраивается порядка 70% всех крыш, что позволяет назвать ее лидером среди всех кровельных материалов. </p>
-				<p>Преимущества металлочерепицы:</p>
-				<p>Усиленная защита от атмосферных воздействий
-					Устойчивость к влиянию внешней среды и различным повреждениям обеспечивает обработка стальных листов металлочерепицы сплавами алюминия и цинка, а также грунтовка и пассировка. В качестве финишного покрытия используются пластизол, призма и полиэстер. Собственное производство металлочерепицы позволяет максимально адаптировать защитные качества материала к российским климатическим условиям. Ваша кровля из металлочерепицы не будет выцветать и деформироваться в течение нескольких десятилетий.</p>
+				<h2 class="we-do__title title title_bordered">ПРАЙС-ЛИСТ</h2>
+				<p>В данном разделе Вы можете скачать прайс-лист всех товаров компании СООО “БРЕСТСТАЛЬ”. Данный прайс открывается при помощи программы Microsoft Office Excel.</p>
+				<p>Если у Вас возникают проблемы с открытием файла в формате xls, то можете скачать прайс-лист в формате pdf.</p>
+				<p>По всем возникающим вопросам обращайтесь к  специалистам нашей компании.</p>
 			</div>
 		</section><!--we-do-->
 
@@ -80,238 +78,49 @@
 								<i class="category-list__icon icon icon-7"></i>
 								<a class="category-list__link" href="">штакетник</a>
 							</li>
-							<li class="category-list__item">
+							<li class="category-list__item category-list__item_noborder">
 								<i class="category-list__icon icon icon-8"></i>
 								<a class="category-list__link" href="">сопутствующие тотвары</a>
 							</li>
-							<li class="category-list__item category-list__item_noborder">
-								<i class="category-list__icon icon icon-9"></i>
-								<a class="category-list__link category-list__link_droped icon-down" href="">палитра цветов</a>
-								<div class="pallite-wraper">
-									<div class="pallite">
-										<div class="pallite__item" data-color="col1"></div>
-										<div class="pallite__item" data-color="col2"></div>
-										<div class="pallite__item" data-color="col3"></div>
-										<div class="pallite__item" data-color="col4"></div>
-										<div class="pallite__item" data-color="col5"></div>
-										<div class="pallite__item" data-color="col6"></div>
-										<div class="pallite__item" data-color="col7"></div>
-										<div class="pallite__item" data-color="col8"></div>
-										<div class="pallite__item" data-color="col9"></div>
-										<div class="pallite__item" data-color="col10"></div>
-										<div class="pallite__item" data-color="col11"></div>
-										<div class="pallite__item" data-color="col12"></div>
-										<div class="pallite__item" data-color="col13"></div>
-										<div class="pallite__item" data-color="col14"></div>
-										<div class="pallite__item" data-color="col15"></div>
-										<div class="pallite__item" data-color="col16"></div>
-										<div class="pallite__item" data-color="col17"></div>
-										<div class="pallite__item" data-color="col18"></div>
-									</div><!--pallite-->
-									<div class="pallite-about" data-color="col1">
-										<div class="pallite-texture">
-											<div class="pallite-texture__matted"></div>
-											<div class="pallite-texture__glossy"></div>
-										</div>
-										<div class="pallite-about__name">
-											<p>матовый</p>
-											<p>глянец</p>
-										</div>
-										<p>цвет: ral 8014</p>
-									</div>
-									<div class="pallite-about" data-color="col2">
-										<div class="pallite-texture">
-											<div class="pallite-texture__matted"></div>
-											<div class="pallite-texture__glossy"></div>
-										</div>
-										<div class="pallite-about__name">
-											<p>матовый</p>
-											<p>глянец</p>
-										</div>
-										<p>цвет: ral 8015</p>
-									</div>
-									<div class="pallite-about" data-color="col3">
-										<div class="pallite-texture">
-											<div class="pallite-texture__matted"></div>
-											<div class="pallite-texture__glossy"></div>
-										</div>
-										<div class="pallite-about__name">
-											<p>матовый</p>
-											<p>глянец</p>
-										</div>
-										<p>цвет: ral 8015</p>
-									</div>
-									<div class="pallite-about" data-color="col4">
-										<div class="pallite-texture">
-											<div class="pallite-texture__matted"></div>
-											<div class="pallite-texture__glossy"></div>
-										</div>
-										<div class="pallite-about__name">
-											<p>матовый</p>
-											<p>глянец</p>
-										</div>
-										<p>цвет: ral 8015</p>
-									</div>
-									<div class="pallite-about" data-color="col5">
-										<div class="pallite-texture">
-											<div class="pallite-texture__matted"></div>
-											<div class="pallite-texture__glossy"></div>
-										</div>
-										<div class="pallite-about__name">
-											<p>матовый</p>
-											<p>глянец</p>
-										</div>
-										<p>цвет: ral 8015</p>
-									</div>
-									<div class="pallite-about" data-color="col6">
-										<div class="pallite-texture">
-											<div class="pallite-texture__matted"></div>
-											<div class="pallite-texture__glossy"></div>
-										</div>
-										<div class="pallite-about__name">
-											<p>матовый</p>
-											<p>глянец</p>
-										</div>
-										<p>цвет: ral 8015</p>
-									</div>
-									<div class="pallite-about" data-color="col7">
-										<div class="pallite-texture">
-											<div class="pallite-texture__matted"></div>
-											<div class="pallite-texture__glossy"></div>
-										</div>
-										<div class="pallite-about__name">
-											<p>матовый</p>
-											<p>глянец</p>
-										</div>
-										<p>цвет: ral 8015</p>
-									</div>
-									<div class="pallite-about" data-color="col8">
-										<div class="pallite-texture">
-											<div class="pallite-texture__matted"></div>
-											<div class="pallite-texture__glossy"></div>
-										</div>
-										<div class="pallite-about__name">
-											<p>матовый</p>
-											<p>глянец</p>
-										</div>
-										<p>цвет: ral 8015</p>
-									</div>
-									<div class="pallite-about" data-color="col9">
-										<div class="pallite-texture">
-											<div class="pallite-texture__matted"></div>
-											<div class="pallite-texture__glossy"></div>
-										</div>
-										<div class="pallite-about__name">
-											<p>матовый</p>
-											<p>глянец</p>
-										</div>
-										<p>цвет: ral 8015</p>
-									</div>
-									<div class="pallite-about" data-color="col10">
-										<div class="pallite-texture">
-											<div class="pallite-texture__matted"></div>
-											<div class="pallite-texture__glossy"></div>
-										</div>
-										<div class="pallite-about__name">
-											<p>матовый</p>
-											<p>глянец</p>
-										</div>
-										<p>цвет: ral 8015</p>
-									</div>
-									<div class="pallite-about" data-color="col11">
-										<div class="pallite-texture">
-											<div class="pallite-texture__matted"></div>
-											<div class="pallite-texture__glossy"></div>
-										</div>
-										<div class="pallite-about__name">
-											<p>матовый</p>
-											<p>глянец</p>
-										</div>
-										<p>цвет: ral 8015</p>
-									</div>
-									<div class="pallite-about" data-color="col12">
-										<div class="pallite-texture">
-											<div class="pallite-texture__matted"></div>
-											<div class="pallite-texture__glossy"></div>
-										</div>
-										<div class="pallite-about__name">
-											<p>матовый</p>
-											<p>глянец</p>
-										</div>
-										<p>цвет: ral 8015</p>
-									</div>
-									<div class="pallite-about" data-color="col13">
-										<div class="pallite-texture">
-											<div class="pallite-texture__matted"></div>
-											<div class="pallite-texture__glossy"></div>
-										</div>
-										<div class="pallite-about__name">
-											<p>матовый</p>
-											<p>глянец</p>
-										</div>
-										<p>цвет: ral 8015</p>
-									</div>
-									<div class="pallite-about" data-color="col14">
-										<div class="pallite-texture">
-											<div class="pallite-texture__matted"></div>
-											<div class="pallite-texture__glossy"></div>
-										</div>
-										<div class="pallite-about__name">
-											<p>матовый</p>
-											<p>глянец</p>
-										</div>
-										<p>цвет: ral 8015</p>
-									</div>
-									<div class="pallite-about" data-color="col15">
-										<div class="pallite-texture">
-											<div class="pallite-texture__matted"></div>
-											<div class="pallite-texture__glossy"></div>
-										</div>
-										<div class="pallite-about__name">
-											<p>матовый</p>
-											<p>глянец</p>
-										</div>
-										<p>цвет: ral 8015</p>
-									</div>
-									<div class="pallite-about" data-color="col16">
-										<div class="pallite-texture">
-											<div class="pallite-texture__matted"></div>
-											<div class="pallite-texture__glossy"></div>
-										</div>
-										<div class="pallite-about__name">
-											<p>матовый</p>
-											<p>глянец</p>
-										</div>
-										<p>цвет: ral 8015</p>
-									</div>
-									<div class="pallite-about" data-color="col17">
-										<div class="pallite-texture">
-											<div class="pallite-texture__matted"></div>
-											<div class="pallite-texture__glossy"></div>
-										</div>
-										<div class="pallite-about__name">
-											<p>матовый</p>
-											<p>глянец</p>
-										</div>
-										<p>цвет: ral 8015</p>
-									</div>
-									<div class="pallite-about" data-color="col18">
-										<div class="pallite-texture">
-											<div class="pallite-texture__matted"></div>
-											<div class="pallite-texture__glossy"></div>
-										</div>
-										<div class="pallite-about__name">
-											<p>матовый</p>
-											<p>глянец</p>
-										</div>
-										<p>цвет: ral 8015</p>
-									</div>
-								</div>
-							</li>
 						</ul><!--category-list-->
 					</div><!--category-list-wrapper-->
-					<div class="col-md-8">
-						
+
+					<div class="col-md-8 prices-info">
+						<div class="prices">
+							<div class="prices__item">
+								<i class="icon icon-xls"></i>
+								<a href="">Скачать прайс-лист от 99 марта 2099 в формате XLS</a>
+							</div>	
+							<div class="prices__item">
+								<i class="icon icon-pdf"></i>
+								<a href="">Скачать прайс-лист от 99 марта 2099 в формате PDF</a>
+							</div>	
+						</div><!--prices-->
+
+						<div class="row pay">
+							<h3 class="pay__title">Способы оплаты</h3>
+							<article class="pay__body">
+								<img src="img/erip.png" alt="">
+								<p>Оплату можно произвести в любом банке Республики Беларусь. Также оплатить услуги СООО «Брестсталь» Вы можете через систему ”Расчет“ (ЕРИП), в любом удобном для Вас месте, в удобное для Вас время, в удобном для Вас пункте банковского обслуживания – интернет-банке, с помощью мобильного банкинга, инфокиоске, кассе банков, банкомате и т.д.</p>
+								<p>	Совершить оплату можно с использованием наличных денежных средств, электронных денег и банковских платежных карточек в пунктах банковского обслуживания  банков, которые оказывают услуги по приему платежей, а также посредством инструментов дистанционного банковского обслуживания.</p>
+								<h4>ДЛЯ ПРОВЕДЕНИЯ ПЛАТЕЖА НЕОБХОДИМО:</h4>
+								<p>
+									Выбрать<br>
+									Пункт “Система “Расчет” (ЕРИП) <br>	
+									г.Брест <br>
+									Строительство, Бытовые услуги <br>
+									Брестсталь <br>									
+								</p>
+								<p>
+									Для оплаты услуги ввести: <br>
+									Номер и дату счета. <br>
+									ФИО полностью. <br>
+									Адрес полностью. <br>
+									Сумму платежа. <br>  
+								</p>
+								<p>Если Вы осуществляете платеж в кассе банка, пожалуйста, сообщите кассиру о необходимости проведения платежа через систему ”Расчет“ (ЕРИП).</p>
+							</article>
+						</div><!--pay-->
 					</div>
 				</div>
 			</div>
