--- a/src/category.html
+++ b/src/category.html
@@ -50,7 +50,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="border-line"></div>
-					<div class="col-md-4 category-list-wrapper">
+					<div class="col-sm-5 col-md-4 category-list-wrapper">
 						<ul class="category-list">
 							<li class="category-list__item">
 								<i class="category-list__icon icon icon-1"></i>
@@ -102,11 +102,6 @@
 										<div class="pallite__item" data-color="col11"></div>
 										<div class="pallite__item" data-color="col12"></div>
 										<div class="pallite__item" data-color="col13"></div>
-										<div class="pallite__item" data-color="col14"></div>
-										<div class="pallite__item" data-color="col15"></div>
-										<div class="pallite__item" data-color="col16"></div>
-										<div class="pallite__item" data-color="col17"></div>
-										<div class="pallite__item" data-color="col18"></div>
 									</div><!--pallite-->
 									<div class="pallite-about" data-color="col1">
 										<div class="pallite-texture">
@@ -117,7 +112,7 @@
 											<p>матовый</p>
 											<p>глянец</p>
 										</div>
-										<p>цвет: ral 8014</p>
+										<p>цвет: ral 3005</p>
 									</div>
 									<div class="pallite-about" data-color="col2">
 										<div class="pallite-texture">
@@ -128,7 +123,7 @@
 											<p>матовый</p>
 											<p>глянец</p>
 										</div>
-										<p>цвет: ral 8015</p>
+										<p>цвет: ral 3009</p>
 									</div>
 									<div class="pallite-about" data-color="col3">
 										<div class="pallite-texture">
@@ -139,7 +134,7 @@
 											<p>матовый</p>
 											<p>глянец</p>
 										</div>
-										<p>цвет: ral 8015</p>
+										<p>цвет: ral 3011</p>
 									</div>
 									<div class="pallite-about" data-color="col4">
 										<div class="pallite-texture">
@@ -150,7 +145,7 @@
 											<p>матовый</p>
 											<p>глянец</p>
 										</div>
-										<p>цвет: ral 8015</p>
+										<p>цвет: ral 5002</p>
 									</div>
 									<div class="pallite-about" data-color="col5">
 										<div class="pallite-texture">
@@ -161,7 +156,7 @@
 											<p>матовый</p>
 											<p>глянец</p>
 										</div>
-										<p>цвет: ral 8015</p>
+										<p>цвет: ral 5005</p>
 									</div>
 									<div class="pallite-about" data-color="col6">
 										<div class="pallite-texture">
@@ -172,7 +167,7 @@
 											<p>матовый</p>
 											<p>глянец</p>
 										</div>
-										<p>цвет: ral 8015</p>
+										<p>цвет: ral 6005</p>
 									</div>
 									<div class="pallite-about" data-color="col7">
 										<div class="pallite-texture">
@@ -183,7 +178,7 @@
 											<p>матовый</p>
 											<p>глянец</p>
 										</div>
-										<p>цвет: ral 8015</p>
+										<p>цвет: ral 6020</p>
 									</div>
 									<div class="pallite-about" data-color="col8">
 										<div class="pallite-texture">
@@ -194,7 +189,7 @@
 											<p>матовый</p>
 											<p>глянец</p>
 										</div>
-										<p>цвет: ral 8015</p>
+										<p>цвет: ral 7024</p>
 									</div>
 									<div class="pallite-about" data-color="col9">
 										<div class="pallite-texture">
@@ -205,7 +200,7 @@
 											<p>матовый</p>
 											<p>глянец</p>
 										</div>
-										<p>цвет: ral 8015</p>
+										<p>цвет: ral 8004</p>
 									</div>
 									<div class="pallite-about" data-color="col10">
 										<div class="pallite-texture">
@@ -216,7 +211,7 @@
 											<p>матовый</p>
 											<p>глянец</p>
 										</div>
-										<p>цвет: ral 8015</p>
+										<p>цвет: ral 8017</p>
 									</div>
 									<div class="pallite-about" data-color="col11">
 										<div class="pallite-texture">
@@ -227,7 +222,7 @@
 											<p>матовый</p>
 											<p>глянец</p>
 										</div>
-										<p>цвет: ral 8015</p>
+										<p>цвет: ral 8019</p>
 									</div>
 									<div class="pallite-about" data-color="col12">
 										<div class="pallite-texture">
@@ -238,7 +233,7 @@
 											<p>матовый</p>
 											<p>глянец</p>
 										</div>
-										<p>цвет: ral 8015</p>
+										<p>цвет: ral 9003</p>
 									</div>
 									<div class="pallite-about" data-color="col13">
 										<div class="pallite-texture">
@@ -249,68 +244,13 @@
 											<p>матовый</p>
 											<p>глянец</p>
 										</div>
-										<p>цвет: ral 8015</p>
-									</div>
-									<div class="pallite-about" data-color="col14">
-										<div class="pallite-texture">
-											<div class="pallite-texture__matted"></div>
-											<div class="pallite-texture__glossy"></div>
-										</div>
-										<div class="pallite-about__name">
-											<p>матовый</p>
-											<p>глянец</p>
-										</div>
-										<p>цвет: ral 8015</p>
-									</div>
-									<div class="pallite-about" data-color="col15">
-										<div class="pallite-texture">
-											<div class="pallite-texture__matted"></div>
-											<div class="pallite-texture__glossy"></div>
-										</div>
-										<div class="pallite-about__name">
-											<p>матовый</p>
-											<p>глянец</p>
-										</div>
-										<p>цвет: ral 8015</p>
-									</div>
-									<div class="pallite-about" data-color="col16">
-										<div class="pallite-texture">
-											<div class="pallite-texture__matted"></div>
-											<div class="pallite-texture__glossy"></div>
-										</div>
-										<div class="pallite-about__name">
-											<p>матовый</p>
-											<p>глянец</p>
-										</div>
-										<p>цвет: ral 8015</p>
-									</div>
-									<div class="pallite-about" data-color="col17">
-										<div class="pallite-texture">
-											<div class="pallite-texture__matted"></div>
-											<div class="pallite-texture__glossy"></div>
-										</div>
-										<div class="pallite-about__name">
-											<p>матовый</p>
-											<p>глянец</p>
-										</div>
-										<p>цвет: ral 8015</p>
-									</div>
-									<div class="pallite-about" data-color="col18">
-										<div class="pallite-texture">
-											<div class="pallite-texture__matted"></div>
-											<div class="pallite-texture__glossy"></div>
-										</div>
-										<div class="pallite-about__name">
-											<p>матовый</p>
-											<p>глянец</p>
-										</div>
-										<p>цвет: ral 8015</p>
+										<p>цвет: ral 9005</p>
 									</div>
 								</div>
 							</li>
 						</ul><!--category-list-->
 					</div><!--category-list-wrapper-->
-					<div class="col-md-8">
+					<div class="col-sm-7 col-md-8">
 						<div class="category-products">
 							<div class="category-product">
 								<div class="category-product__img">
