--- a/src/price.html
+++ b/src/price.html
@@ -44,7 +44,7 @@
 			</div>
 		</section><!--we-do-->
 
-		<section class="category">
+		<section class="category category_short">
 			<div class="container">
 				<div class="row">
 					<div class="border-line"></div>
@@ -78,7 +78,7 @@
 								<i class="category-list__icon icon icon-7"></i>
 								<a class="category-list__link" href="">штакетник</a>
 							</li>
-							<li class="category-list__item category-list__item_noborder">
+							<li class="category-list__item">
 								<i class="category-list__icon icon icon-8"></i>
 								<a class="category-list__link" href="">сопутствующие тотвары</a>
 							</li>
