--- a/src/category.html
+++ b/src/category.html
@@ -84,7 +84,7 @@
 								<i class="category-list__icon icon icon-8"></i>
 								<a class="category-list__link" href="">сопутствующие тотвары</a>
 							</li>
-							<li class="category-list__item category-list__item_noborder">
+							<li class="category-list__item category-list__item_noborder pallite-link">
 								<i class="category-list__icon icon icon-9"></i>
 								<a class="category-list__link category-list__link_droped icon-down" href="">палитра цветов</a>
 								<div class="pallite-wraper">
@@ -112,7 +112,7 @@
 											<p>матовый</p>
 											<p>глянец</p>
 										</div>
-										<p>цвет: ral 3005</p>
+										<p>цвет: ral 3005 красное вино</p>
 									</div>
 									<div class="pallite-about" data-color="col2">
 										<div class="pallite-texture">
@@ -123,7 +123,7 @@
 											<p>матовый</p>
 											<p>глянец</p>
 										</div>
-										<p>цвет: ral 3009</p>
+										<p>цвет: ral 3009 красный оксид</p>
 									</div>
 									<div class="pallite-about" data-color="col3">
 										<div class="pallite-texture">
@@ -134,7 +134,7 @@
 											<p>матовый</p>
 											<p>глянец</p>
 										</div>
-										<p>цвет: ral 3011</p>
+										<p>цвет: ral 3011 коричневый красный</p>
 									</div>
 									<div class="pallite-about" data-color="col4">
 										<div class="pallite-texture">
@@ -145,7 +145,7 @@
 											<p>матовый</p>
 											<p>глянец</p>
 										</div>
-										<p>цвет: ral 5002</p>
+										<p>цвет: ral 5002 синий ультрамарин</p>
 									</div>
 									<div class="pallite-about" data-color="col5">
 										<div class="pallite-texture">
@@ -156,7 +156,7 @@
 											<p>матовый</p>
 											<p>глянец</p>
 										</div>
-										<p>цвет: ral 5005</p>
+										<p>цвет: ral 5005 темный синий</p>
 									</div>
 									<div class="pallite-about" data-color="col6">
 										<div class="pallite-texture">
@@ -167,7 +167,7 @@
 											<p>матовый</p>
 											<p>глянец</p>
 										</div>
-										<p>цвет: ral 6005</p>
+										<p>цвет: ral 6005 зеленый мох</p>
 									</div>
 									<div class="pallite-about" data-color="col7">
 										<div class="pallite-texture">
@@ -178,7 +178,7 @@
 											<p>матовый</p>
 											<p>глянец</p>
 										</div>
-										<p>цвет: ral 6020</p>
+										<p>цвет: ral 6020 зеленый хром</p>
 									</div>
 									<div class="pallite-about" data-color="col8">
 										<div class="pallite-texture">
@@ -189,7 +189,7 @@
 											<p>матовый</p>
 											<p>глянец</p>
 										</div>
-										<p>цвет: ral 7024</p>
+										<p>цвет: ral 7024 графитовый серый</p>
 									</div>
 									<div class="pallite-about" data-color="col9">
 										<div class="pallite-texture">
@@ -200,7 +200,7 @@
 											<p>матовый</p>
 											<p>глянец</p>
 										</div>
-										<p>цвет: ral 8004</p>
+										<p>цвет: ral 8004 медный коричневый</p>
 									</div>
 									<div class="pallite-about" data-color="col10">
 										<div class="pallite-texture">
@@ -211,7 +211,7 @@
 											<p>матовый</p>
 											<p>глянец</p>
 										</div>
-										<p>цвет: ral 8017</p>
+										<p>цвет: ral 8017 шоколадный коричневый</p>
 									</div>
 									<div class="pallite-about" data-color="col11">
 										<div class="pallite-texture">
@@ -222,7 +222,7 @@
 											<p>матовый</p>
 											<p>глянец</p>
 										</div>
-										<p>цвет: ral 8019</p>
+										<p>цвет: ral 8019 серый коричневый</p>
 									</div>
 									<div class="pallite-about" data-color="col12">
 										<div class="pallite-texture">
@@ -233,7 +233,7 @@
 											<p>матовый</p>
 											<p>глянец</p>
 										</div>
-										<p>цвет: ral 9003</p>
+										<p>цвет: ral 9003 белый</p>
 									</div>
 									<div class="pallite-about" data-color="col13">
 										<div class="pallite-texture">
@@ -244,7 +244,7 @@
 											<p>матовый</p>
 											<p>глянец</p>
 										</div>
-										<p>цвет: ral 9005</p>
+										<p>цвет: ral 9005 черный</p>
 									</div>
 								</div>
 							</li>
