--- a/src/price.html
+++ b/src/price.html
@@ -44,12 +44,12 @@
 			</div>
 		</section><!--we-do-->
 
-		<section class="category category_short">
+		<section class="category">
 			<div class="container">
 				<div class="row">
 					<div class="border-line"></div>
 					<div class="col-md-4 category-list-wrapper">
-						<ul class="category-list">
+						<ul class="category-list category-list_short">
 							<li class="category-list__item">
 								<i class="category-list__icon icon icon-1"></i>
 								<a class="category-list__link" href="">металлочерепица</a>
@@ -81,6 +81,170 @@
 							<li class="category-list__item">
 								<i class="category-list__icon icon icon-8"></i>
 								<a class="category-list__link" href="">сопутствующие тотвары</a>
+							</li>
+							<li class="category-list__item category-list__item_noborder pallite-link">
+								<i class="category-list__icon icon icon-9"></i>
+								<a class="category-list__link category-list__link_droped icon-down" href="">палитра цветов</a>
+								<div class="pallite-wraper">
+									<div class="pallite">
+										<div class="pallite__item" data-color="col1"></div>
+										<div class="pallite__item" data-color="col2"></div>
+										<div class="pallite__item" data-color="col3"></div>
+										<div class="pallite__item" data-color="col4"></div>
+										<div class="pallite__item" data-color="col5"></div>
+										<div class="pallite__item" data-color="col6"></div>
+										<div class="pallite__item" data-color="col7"></div>
+										<div class="pallite__item" data-color="col8"></div>
+										<div class="pallite__item" data-color="col9"></div>
+										<div class="pallite__item" data-color="col10"></div>
+										<div class="pallite__item" data-color="col11"></div>
+										<div class="pallite__item" data-color="col12"></div>
+										<div class="pallite__item" data-color="col13"></div>
+									</div><!--pallite-->
+									<div class="pallite-about" data-color="col1">
+										<div class="pallite-texture">
+											<div class="pallite-texture__matted"></div>
+											<div class="pallite-texture__glossy"></div>
+										</div>
+										<div class="pallite-about__name">
+											<p>матовый</p>
+											<p>глянец</p>
+										</div>
+										<p>цвет: ral 3005</p>
+									</div>
+									<div class="pallite-about" data-color="col2">
+										<div class="pallite-texture">
+											<div class="pallite-texture__matted"></div>
+											<div class="pallite-texture__glossy"></div>
+										</div>
+										<div class="pallite-about__name">
+											<p>матовый</p>
+											<p>глянец</p>
+										</div>
+										<p>цвет: ral 3009</p>
+									</div>
+									<div class="pallite-about" data-color="col3">
+										<div class="pallite-texture">
+											<div class="pallite-texture__matted"></div>
+											<div class="pallite-texture__glossy"></div>
+										</div>
+										<div class="pallite-about__name">
+											<p>матовый</p>
+											<p>глянец</p>
+										</div>
+										<p>цвет: ral 3011</p>
+									</div>
+									<div class="pallite-about" data-color="col4">
+										<div class="pallite-texture">
+											<div class="pallite-texture__matted"></div>
+											<div class="pallite-texture__glossy"></div>
+										</div>
+										<div class="pallite-about__name">
+											<p>матовый</p>
+											<p>глянец</p>
+										</div>
+										<p>цвет: ral 5002</p>
+									</div>
+									<div class="pallite-about" data-color="col5">
+										<div class="pallite-texture">
+											<div class="pallite-texture__matted"></div>
+											<div class="pallite-texture__glossy"></div>
+										</div>
+										<div class="pallite-about__name">
+											<p>матовый</p>
+											<p>глянец</p>
+										</div>
+										<p>цвет: ral 5005</p>
+									</div>
+									<div class="pallite-about" data-color="col6">
+										<div class="pallite-texture">
+											<div class="pallite-texture__matted"></div>
+											<div class="pallite-texture__glossy"></div>
+										</div>
+										<div class="pallite-about__name">
+											<p>матовый</p>
+											<p>глянец</p>
+										</div>
+										<p>цвет: ral 6005</p>
+									</div>
+									<div class="pallite-about" data-color="col7">
+										<div class="pallite-texture">
+											<div class="pallite-texture__matted"></div>
+											<div class="pallite-texture__glossy"></div>
+										</div>
+										<div class="pallite-about__name">
+											<p>матовый</p>
+											<p>глянец</p>
+										</div>
+										<p>цвет: ral 6020</p>
+									</div>
+									<div class="pallite-about" data-color="col8">
+										<div class="pallite-texture">
+											<div class="pallite-texture__matted"></div>
+											<div class="pallite-texture__glossy"></div>
+										</div>
+										<div class="pallite-about__name">
+											<p>матовый</p>
+											<p>глянец</p>
+										</div>
+										<p>цвет: ral 7024</p>
+									</div>
+									<div class="pallite-about" data-color="col9">
+										<div class="pallite-texture">
+											<div class="pallite-texture__matted"></div>
+											<div class="pallite-texture__glossy"></div>
+										</div>
+										<div class="pallite-about__name">
+											<p>матовый</p>
+											<p>глянец</p>
+										</div>
+										<p>цвет: ral 8004</p>
+									</div>
+									<div class="pallite-about" data-color="col10">
+										<div class="pallite-texture">
+											<div class="pallite-texture__matted"></div>
+											<div class="pallite-texture__glossy"></div>
+										</div>
+										<div class="pallite-about__name">
+											<p>матовый</p>
+											<p>глянец</p>
+										</div>
+										<p>цвет: ral 8017</p>
+									</div>
+									<div class="pallite-about" data-color="col11">
+										<div class="pallite-texture">
+											<div class="pallite-texture__matted"></div>
+											<div class="pallite-texture__glossy"></div>
+										</div>
+										<div class="pallite-about__name">
+											<p>матовый</p>
+											<p>глянец</p>
+										</div>
+										<p>цвет: ral 8019</p>
+									</div>
+									<div class="pallite-about" data-color="col12">
+										<div class="pallite-texture">
+											<div class="pallite-texture__matted"></div>
+											<div class="pallite-texture__glossy"></div>
+										</div>
+										<div class="pallite-about__name">
+											<p>матовый</p>
+											<p>глянец</p>
+										</div>
+										<p>цвет: ral 9003</p>
+									</div>
+									<div class="pallite-about" data-color="col13">
+										<div class="pallite-texture">
+											<div class="pallite-texture__matted"></div>
+											<div class="pallite-texture__glossy"></div>
+										</div>
+										<div class="pallite-about__name">
+											<p>матовый</p>
+											<p>глянец</p>
+										</div>
+										<p>цвет: ral 9005</p>
+									</div>
+								</div>
 							</li>
 						</ul><!--category-list-->
 					</div><!--category-list-wrapper-->
