--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,10 @@
 
 		<section class="first">
 
+			<div class="slides">
+				<div class="slide" style="background-image: url('img/top-bg.jpg')"></div>
+				<div class="slide" style="background-image: url('img/aboutbg1.png')"></div>
+			</div>
 			<div class="container first__inner">
 					<div class="first__txt">
 						<p>
@@ -41,6 +45,7 @@
 				<p>Приветствуем Вас на сайте СООО "БРЕСТСТАЛЬ"!</p>
 				<p>Здесь Вы найдете всю интересующую Вас информацию  о продукции нашей фирмы, познакомитесь с видами металлочерепицы и профнастила,  узнаете о конструкции кровли и водосточной системы, составе металлочерепицы. </p>
 				<p>С помощью таблицы сравнительных характеристик сожете оценить достоинства того или иного вида покрытий. Найдете полезные советы по эксплуатации металлочерепицы,а также контактную информацию, для связи с нами.</p>
+				<span>С уважением, СООО "БРЕСТСТАЛЬ"</span>
 				<!-- <a href="" class="we-do__link">далее...</a> -->
 			</div>
 		</section><!--we-do-->
@@ -56,19 +61,19 @@
 						</div>
 						<a href="" data-slide="first" class="list__item list__item_border">металлочерепица</a>
 						<a href="" data-slide="first" class="list__item list__item_border">профнастил</a>
-						<a href="" data-slide="first" class="list__item list__item_border">декоративный профиль</a>
-						<a href="" data-slide="first" class="list__item list__item_border">комплектующие</a>
-						<a href="" data-slide="second" class="list__item list__item_border">металлочерепица1</a>
-						<a href="" data-slide="second" class="list__item list__item_border">профнастил1</a>
-						<a href="" data-slide="second" class="list__item list__item_border">декоративный профиль1</a>
-						<a href="" data-slide="second" class="list__item list__item_border">комплектующие1</a>
+						<a href="" data-slide="first" class="list__item list__item_border">водосточная система</a>
+						<a href="" data-slide="first" class="list__item list__item_border">фальцевая картина</a>
+						<a href="" data-slide="second" class="list__item list__item_border">кровельные комплектующие</a>
+						<a href="" data-slide="second" class="list__item list__item_border">софит металлический</a>
+						<a href="" data-slide="second" class="list__item list__item_border">штакетник</a>
+						<a href="" data-slide="second" class="list__item list__item_border">сопутствующие товары</a>
 					</nav>
 				</div>
 				<div class="products__list">
 					<div class="products__item">
 						<img src="img/dash1.jpg" alt="">
 						<div class="over">
-							<p>декоративный <br>профиль</p>
+							<p>металлочерепица</p>
 							<i class="icon-plus"></i>
 							<a class="link" href="">подробно</a>
 						</div>
@@ -76,7 +81,7 @@
 					<div class="products__item">
 						<img src="img/dash2.jpg" alt="">
 						<div class="over">
-							<p>декоративный <br>профиль</p>
+							<p>профнастил</p>
 							<i class="icon-plus"></i>
 							<a class="link" href="">подробно</a>
 						</div>
@@ -84,7 +89,7 @@
 					<div class="products__item">
 						<img src="img/dash3.jpg" alt="">
 						<div class="over">
-							<p>декоративный <br>профиль</p>
+							<p>водосточная<br>система</p>
 							<i class="icon-plus"></i>
 							<a class="link" href="">подробно</a>
 						</div>
@@ -92,7 +97,7 @@
 					<div class="products__item">
 						<img src="img/dash4.jpg" alt="">
 						<div class="over">
-							<p>декоративный <br>профиль</p>
+							<p>фальцевая <br>картина</p>
 							<i class="icon-plus"></i>
 							<a class="link" href="">подробно</a>
 						</div>
@@ -100,15 +105,7 @@
 					<div class="products__item">
 						<img src="img/dash5.png" alt="">
 						<div class="over">
-							<p>декоративный <br>профиль</p>
-							<i class="icon-plus"></i>
-							<a class="link" href="">подробно</a>
-						</div>
-					</div>
-					<div class="products__item">
-						<img src="img/dash6.jpg" alt="">
-						<div class="over">
-							<p>декоративный <br>профиль</p>
+							<p>кровельные <br>комплектующие</p>
 							<i class="icon-plus"></i>
 							<a class="link" href="">подробно</a>
 						</div>
@@ -116,7 +113,7 @@
 					<div class="products__item">
 						<img src="img/dash7.png" alt="">
 						<div class="over">
-							<p>декоративный <br>профиль</p>
+							<p>софит <br>металлический</p>
 							<i class="icon-plus"></i>
 							<a class="link" href="">подробно</a>
 						</div>
@@ -124,7 +121,15 @@
 					<div class="products__item">
 						<img src="img/dash8.png" alt="">
 						<div class="over">
-							<p>декоративный <br> профиль</p>
+							<p>штакетник</p>
+							<i class="icon-plus"></i>
+							<a class="link" href="">подробно</a>
+						</div>
+					</div>
+					<div class="products__item">
+						<img src="img/dash6.jpg" alt="">
+						<div class="over">
+							<p>сопутсвующие <br>товары </p>
 							<i class="icon-plus"></i>
 							<a class="link" href="">подробно</a>
 						</div>
